--- a/hairista/Controller/ListHair/HairFullView/HairFullView.xib
+++ b/hairista/Controller/ListHair/HairFullView/HairFullView.xib
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -28,15 +26,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m8Q-AK-cU3">
-                    <rect key="frame" x="0.0" y="102" width="375" height="462"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="m8Q-AK-cU3" secondAttribute="height" multiplier="125:154" id="8Rf-3Z-l9X"/>
-                    </constraints>
+                    <rect key="frame" x="0.0" y="75" width="375" height="592"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mẫu tóc 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qzt-Dd-dKx">
-                    <rect key="frame" x="9" y="20" width="350" height="36"/>
+                    <rect key="frame" x="16" y="24" width="343" height="36"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="36" id="iis-f6-sqq"/>
+                        <constraint firstAttribute="height" constant="36" id="254-W1-GAG"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -46,12 +41,13 @@
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <constraints>
-                <constraint firstItem="m8Q-AK-cU3" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="4oM-HM-CwE"/>
-                <constraint firstItem="qzt-Dd-dKx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="EKF-s7-w3z"/>
-                <constraint firstAttribute="trailing" secondItem="qzt-Dd-dKx" secondAttribute="trailing" constant="16" id="GlU-Tg-e1N"/>
-                <constraint firstItem="qzt-Dd-dKx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="9" id="U0X-Zs-zuT"/>
-                <constraint firstItem="m8Q-AK-cU3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="bUW-da-fKV"/>
-                <constraint firstItem="m8Q-AK-cU3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="qf2-A7-f51"/>
+                <constraint firstItem="qzt-Dd-dKx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="9lF-JN-agV"/>
+                <constraint firstItem="qzt-Dd-dKx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="24" id="KKJ-8w-hCJ"/>
+                <constraint firstAttribute="bottom" secondItem="m8Q-AK-cU3" secondAttribute="bottom" id="VgL-vp-QGf"/>
+                <constraint firstItem="m8Q-AK-cU3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Xe4-FD-NHG"/>
+                <constraint firstAttribute="trailing" secondItem="qzt-Dd-dKx" secondAttribute="trailing" constant="16" id="bEY-7E-ut2"/>
+                <constraint firstItem="m8Q-AK-cU3" firstAttribute="top" secondItem="qzt-Dd-dKx" secondAttribute="bottom" constant="15" id="fdC-6x-ddg"/>
+                <constraint firstAttribute="trailing" secondItem="m8Q-AK-cU3" secondAttribute="trailing" id="zNc-OE-nGb"/>
             </constraints>
             <connections>
                 <outletCollection property="gestureRecognizers" destination="LOU-XC-1xF" appends="YES" id="YkL-EM-Dwm"/>
