--- a/hairista/Controller/Manager/ListUser/UserCell/UserCell.xib
+++ b/hairista/Controller/Manager/ListUser/UserCell/UserCell.xib
@@ -23,11 +23,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="100.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="Imz-lo-8Wy">
-                        <rect key="frame" x="8" y="20.5" width="54" height="54"/>
+                        <rect key="frame" x="8" y="23" width="54" height="54"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="54" id="5Au-Qm-GC2"/>
                             <constraint firstAttribute="height" constant="54" id="e88-zO-Kmj"/>
@@ -39,7 +39,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hồ Ngọc Hà" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSD-Ea-iRg">
-                        <rect key="frame" x="70" y="20" width="180" height="21"/>
+                        <rect key="frame" x="70" y="20" width="194" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="4Ro-RK-3eS"/>
                         </constraints>
@@ -48,9 +48,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0932188608" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nu-Xb-iv0">
-                        <rect key="frame" x="258" y="18" width="110" height="21"/>
+                        <rect key="frame" x="268" y="18" width="100" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="110" id="0aq-On-l1a"/>
+                            <constraint firstAttribute="width" constant="100" id="0aq-On-l1a"/>
                             <constraint firstAttribute="height" constant="21" id="Ulb-ih-qoa"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
@@ -58,16 +58,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="58/150 Âu cơ, Phường9, Quận Tân Bình, TP. Hồ Chí Minh." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UzR-uG-71b">
-                        <rect key="frame" x="70" y="46" width="249" height="37.5"/>
+                        <rect key="frame" x="70" y="46" width="255" height="42.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="gJ0-oI-W7M"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="gJ0-oI-W7M"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aDa-ct-PrY">
-                        <rect key="frame" x="8" y="99" width="367" height="0.5"/>
+                        <rect key="frame" x="8" y="100" width="367" height="0.5"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="KbJ-cY-9AO"/>
@@ -90,9 +90,8 @@
                     <constraint firstItem="Imz-lo-8Wy" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="4AP-wp-Yb2"/>
                     <constraint firstItem="UzR-uG-71b" firstAttribute="top" secondItem="6nu-Xb-iv0" secondAttribute="bottom" constant="7" id="7Tb-z9-EbK"/>
                     <constraint firstItem="6nu-Xb-iv0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="PzO-ZW-acK"/>
-                    <constraint firstItem="UzR-uG-71b" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-48" id="WA2-up-ggH"/>
                     <constraint firstItem="aDa-ct-PrY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="ZWk-se-Q8R"/>
-                    <constraint firstItem="6nu-Xb-iv0" firstAttribute="leading" secondItem="DSD-Ea-iRg" secondAttribute="trailing" constant="8" id="dPI-SI-sPp"/>
+                    <constraint firstItem="6nu-Xb-iv0" firstAttribute="leading" secondItem="DSD-Ea-iRg" secondAttribute="trailing" constant="4" id="dPI-SI-sPp"/>
                     <constraint firstItem="DSD-Ea-iRg" firstAttribute="leading" secondItem="Imz-lo-8Wy" secondAttribute="trailing" constant="8" id="dSx-jc-twJ"/>
                     <constraint firstAttribute="bottom" secondItem="aDa-ct-PrY" secondAttribute="bottom" id="dVd-eh-uMN"/>
                     <constraint firstItem="DSD-Ea-iRg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="fAl-2p-I8c"/>
@@ -100,9 +99,9 @@
                     <constraint firstItem="UzR-uG-71b" firstAttribute="leading" secondItem="Imz-lo-8Wy" secondAttribute="trailing" constant="8" id="naq-iK-4H0"/>
                     <constraint firstItem="yob-a6-4uY" firstAttribute="top" secondItem="6nu-Xb-iv0" secondAttribute="bottom" constant="8" id="oyG-UF-k3c"/>
                     <constraint firstAttribute="trailing" secondItem="aDa-ct-PrY" secondAttribute="trailing" id="tCK-jb-KTK"/>
+                    <constraint firstItem="yob-a6-4uY" firstAttribute="leading" secondItem="UzR-uG-71b" secondAttribute="trailing" constant="2" id="ubS-jS-spk"/>
                     <constraint firstAttribute="trailing" secondItem="yob-a6-4uY" secondAttribute="trailing" constant="4" id="v3V-a9-1Ug"/>
                     <constraint firstAttribute="trailing" secondItem="6nu-Xb-iv0" secondAttribute="trailing" constant="7" id="vVT-X7-l1h"/>
-                    <constraint firstItem="aDa-ct-PrY" firstAttribute="top" secondItem="yob-a6-4uY" secondAttribute="bottom" constant="8" id="zTS-Lx-Gft"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -111,6 +110,7 @@
                 <outlet property="lblAddress" destination="UzR-uG-71b" id="iAm-QI-k27"/>
                 <outlet property="lblFullName" destination="DSD-Ea-iRg" id="txW-rh-m6i"/>
                 <outlet property="lblPhone" destination="6nu-Xb-iv0" id="ZU5-xA-aic"/>
+                <outlet property="widthContraintButtonAdd" destination="GwK-fy-MkX" id="cRz-6g-yVm"/>
             </connections>
             <point key="canvasLocation" x="-131.5" y="-141.5"/>
         </tableViewCell>
