--- a/hairista/Controller/Login/LoginViewController.xib
+++ b/hairista/Controller/Login/LoginViewController.xib
@@ -88,7 +88,7 @@
                                     </constraints>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderLabel.textColor">
                                             <color key="value" red="0.34901960784313724" green="0.31764705882352939" blue="0.27386915703781511" alpha="1" colorSpace="calibratedRGB"/>
